--- a/css/style.css
+++ b/css/style.css
@@ -328,7 +328,7 @@ h1, h2, h3, h4, h5, h6, figure {
 }
 @media screen and (max-width: 768px) {
   .fh5co-cover .display-t,
-.fh5co-cover .display-tc {
+  .fh5co-cover .display-tc {
     height: 600px;
   }
 }
@@ -348,7 +348,7 @@ h1, h2, h3, h4, h5, h6, figure {
 }
 @media screen and (max-width: 768px) {
   .fh5co-cover.fh5co-cover-sm .display-t,
-.fh5co-cover.fh5co-cover-sm .display-tc {
+  .fh5co-cover.fh5co-cover-sm .display-tc {
     height: 400px;
   }
 }
@@ -388,14 +388,14 @@ h1, h2, h3, h4, h5, h6, figure {
 }
 @media screen and (max-width: 768px) {
   #fh5co-counter,
-#fh5co-event {
+  #fh5co-event {
     height: inherit;
     padding: 7em 0;
   }
   #fh5co-counter .display-t,
-#fh5co-counter .display-tc,
-#fh5co-event .display-t,
-#fh5co-event .display-tc {
+  #fh5co-counter .display-tc,
+  #fh5co-event .display-t,
+  #fh5co-event .display-tc {
     height: inherit;
   }
 }
@@ -414,7 +414,7 @@ h1, h2, h3, h4, h5, h6, figure {
 }
 @media screen and (max-width: 768px) {
   #fh5co-counter .event-wrap,
-#fh5co-event .event-wrap {
+  #fh5co-event .event-wrap {
     margin-bottom: 10px;
   }
 }
@@ -964,15 +964,15 @@ form label {
 }
 @media screen and (max-width: 768px) {
   #fh5co-header .display-tc h1,
-#fh5co-counter .display-tc h1,
-.fh5co-cover .display-tc h1 {
+  #fh5co-counter .display-tc h1,
+  .fh5co-cover .display-tc h1 {
     font-size: 40px;
   }
 }
 @media screen and (max-width: 480px) {
   #fh5co-header .display-tc h1,
-#fh5co-counter .display-tc h1,
-.fh5co-cover .display-tc h1 {
+  #fh5co-counter .display-tc h1,
+  .fh5co-cover .display-tc h1 {
     font-size: 30px;
   }
 }
@@ -985,8 +985,8 @@ form label {
 }
 @media screen and (max-width: 480px) {
   #fh5co-header .display-tc h2,
-#fh5co-counter .display-tc h2,
-.fh5co-cover .display-tc h2 {
+  #fh5co-counter .display-tc h2,
+  .fh5co-cover .display-tc h2 {
     font-size: 16px;
   }
 }
@@ -1120,14 +1120,14 @@ form label {
 }
 @media screen and (max-width: 768px) {
   #fh5co-testimonial,
-#fh5co-services,
-#fh5co-started,
-#fh5co-footer,
-#fh5co-event,
-#fh5co-couple-story,
-#fh5co-couple,
-#fh5co-gallery,
-.fh5co-section {
+  #fh5co-services,
+  #fh5co-started,
+  #fh5co-footer,
+  #fh5co-event,
+  #fh5co-couple-story,
+  #fh5co-couple,
+  #fh5co-gallery,
+  .fh5co-section {
     padding: 3em 0;
   }
 }
@@ -1566,7 +1566,7 @@ form label {
 
 @media screen and (max-width: 768px) {
   #fh5co-footer .copyright .pull-left,
-#fh5co-footer .copyright .pull-right {
+  #fh5co-footer .copyright .pull-right {
     float: none !important;
     text-align: center;
   }
@@ -2107,9 +2107,7 @@ form label {
   background-position: center center;
   background-repeat: no-repeat;
   background-size: 30px;
-  /*background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABmJLR0QA/wD/AP+gvaeTAAAAhUlEQVRIie2U0QmAMAxEE3EMcRIdQAdxUXGSDPL8ESmlasUWKfR9hssduY+I/AWwAWsqXWgRgK+6xhPPgLkLPODpDJhcT/UCTES6iAPvMFXtrwIeK4lBVU/f5k6YguwBbWjonviGUMXlV1QDakCpAcDw1ggYQ/Ps79q/YBER+2J+eFTi2QH5gHBCJs9nEQAAAABJRU5ErkJggg==);*/
-  background-image: url("https://i.imgur.com/IDzX9gL.png") ;
-
+  background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABmJLR0QA/wD/AP+gvaeTAAAAhUlEQVRIie2U0QmAMAxEE3EMcRIdQAdxUXGSDPL8ESmlasUWKfR9hssduY+I/AWwAWsqXWgRgK+6xhPPgLkLPODpDJhcT/UCTES6iAPvMFXtrwIeK4lBVU/f5k6YguwBbWjonviGUMXlV1QDakCpAcDw1ggYQ/Ps79q/YBER+2J+eFTi2QH5gHBCJs9nEQAAAABJRU5ErkJggg==);
 }
 
 .option-btn.open:after {
