--- a/css/style.css
+++ b/css/style.css
@@ -493,7 +493,7 @@ h1, h2, h3, h4, h5, h6, figure {
 
 #overlay {
   background-size: cover;
-  background: #ffffff url("../images/cover-resized.jpg") no-repeat center center;
+  background: #ffffff url("../images/cover-resized.jpg") center center ;
   height: 100%;
   width: 100%;
   position: fixed;
